--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,25 +1,33 @@
 /*-----------------------------------*/
 /*--- IMPORT STYLES FOR FASTPAGES ---*/
-@import "minima/fastpages-styles";   
-
-
+@import "minima/fastpages-styles";
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
 
 /* changed h1 background color */
 h1 {
-	background-color: aquamarine;
+  background-color: aquamarine;
 }
 
 /* glow boxes in post-list */
 .post-list {
-	.Box:hover {
-  		box-shadow: 0 2px 9px rgba(22,26,30,0.25) !important;
-			transition: 0.5s;
-	}
+  .Box:hover {
+    box-shadow: 0 2px 9px rgba(22, 26, 30, 0.25) !important;
+    transition: 0.5s;
+  }
 }
 
-
 // If you want to turn off dark background for syntax highlighting, comment or delete the below line.
-@import "minima/fastpages-dracula-highlight"; 
+@import "minima/fastpages-dracula-highlight";
+
+.mjx-chtml {
+  max-width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+.katex-html {
+  max-width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
